--- a/generator/templates/generator/gigagenerator.html
+++ b/generator/templates/generator/gigagenerator.html
@@ -284,7 +284,7 @@
     <input type="radio" class="btn-check" name="generator_type" id="genTypeGigachat" value="gigachat" autocomplete="off" checked>
     <label class="btn btn-outline-primary" for="genTypeGigachat" id="labelGigachat"><i class="bi bi-robot"></i> Gigachat</label>
     <input type="radio" class="btn-check" name="generator_type" id="genTypeOpenAI" value="openai" autocomplete="off">
-    <label class="btn btn-outline-success" for="genTypeOpenAI" id="labelOpenAI"><i class="bi bi-lightning-charge"></i> OpenAI + Midjourney</label>
+    <label class="btn btn-outline-success" for="genTypeOpenAI" id="labelOpenAI"><i class="bi bi-lightning-charge"></i> OpenAI + DALL-E</label>
   </div>
 </div>
                         </div>
