--- a/generator/templates/generator/index.html
+++ b/generator/templates/generator/index.html
@@ -91,7 +91,7 @@
         <div class="container text-center">
             <p class="mb-0">
                 <i class="bi bi-heart-fill text-danger me-1"></i>
-                Создано с помощью GigaChat AI
+                Создано с помощью AI
             </p>
         </div>
     </footer>
