--- a/generator/templates/generator/wall.html
+++ b/generator/templates/generator/wall.html
@@ -5,8 +5,8 @@
 <div class="nav-popup-menu" id="navMenu">
   <a href="{% url 'profile' %}" class="btn btn-outline-primary"><i class="bi bi-person-circle"></i>Профиль</a>
   <a href="{% url 'index' %}" class="btn btn-outline-success"><i class="bi bi-magic"></i>Генератор</a>
-  <a href="{% url 'edit_profile' %}" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i>Редактировать профиль</a>
   <a href="{% url 'user_wall' %}" class="btn btn-outline-info"><i class="bi bi-card-list"></i>Стена</a>
+  <a href="https://t.me/YourGhostwriterBot" target="_blank" class="btn btn-outline-warning"><i class="bi bi-telegram"></i>Купить доступ</a>
 </div>
 <script>
   const navBtn = document.getElementById('navMenuBtn');
