--- a/generator/templates/generator/limit_exceeded.html
+++ b/generator/templates/generator/limit_exceeded.html
@@ -60,7 +60,7 @@
                     {% endif %}
 
                     <div class="text-center mt-4">
-                        <a href="https://t.me/YourGhostwriterBot" class="btn btn-primary btn-lg me-2" target="_blank">
+                        <a href="https://t.me/Ghostcopywriterregistration_bot" class="btn btn-primary btn-lg me-2" target="_blank">
                             <i class="bi bi-telegram me-2"></i>Обновить тариф
                         </a>
                         <a href="{% url 'home' %}" class="btn btn-outline-primary btn-lg">
