--- a/generator/templates/generator/profile.html
+++ b/generator/templates/generator/profile.html
@@ -61,7 +61,7 @@
       <div class="card shadow-lg border-0 p-4 d-flex flex-wrap gap-2">
         <a href="{% url 'user_wall' %}" class="btn btn-outline-info"><i class="bi bi-card-list me-1"></i>Моя стена</a>
         <a href="{% url 'index' %}" class="btn btn-outline-success"><i class="bi bi-magic me-1"></i>Генератор контента</a>
-        <a href="https://t.me/YourGhostwriterBot" target="_blank" class="btn btn-primary"><i class="bi bi-telegram me-1"></i>Купить доступ</a>
+        <a href="https://t.me/Ghostcopywriterregistration_bot" target="_blank" class="btn btn-primary"><i class="bi bi-telegram me-1"></i>Купить доступ</a>
         <a href="{% url 'logout' %}" class="btn btn-outline-danger"><i class="bi bi-box-arrow-right me-1"></i>Выйти</a>
       </div>
     </div>
