--- a/generator/templates/generator/token_required.html
+++ b/generator/templates/generator/token_required.html
@@ -41,7 +41,7 @@
                     <div class="alert alert-info text-start mb-4">
                         <h5 class="alert-heading">📱 Как получить токен?</h5>
                         <ol class="mb-0">
-                            <li>Откройте Telegram бота <strong>@YourGhostwriterBot</strong></li>
+                            <li>Откройте Telegram бота <strong>@Ghostcopywriterregistration_bot</strong></li>
                             <li>Нажмите <strong>/start</strong></li>
                             <li>Выберите тариф (доступен бесплатный DEMO)</li>
                             <li>Получите ссылку с токеном доступа</li>
@@ -58,7 +58,7 @@
                     </div>
 
                     <div class="mt-4">
-                        <a href="https://t.me/YourGhostwriterBot" class="btn btn-primary btn-lg" target="_blank">
+                        <a href="https://t.me/Ghostcopywriterregistration_bot" class="btn btn-primary btn-lg" target="_blank">
                             <i class="bi bi-telegram me-2"></i>Открыть Telegram бота
                         </a>
                     </div>
