--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
-                <a href="https://t.me/YourGhostwriterBot" class="btn btn-primary btn-lg px-4" target="_blank">
+                <a href="https://t.me/Ghostcopywriterregistration_bot" class="btn btn-primary btn-lg px-4" target="_blank">
                     <i class="bi bi-telegram me-2"></i>Получить токен через Telegram
                 </a>
                 <a href="{% url 'token_required_page' %}" class="btn btn-outline-primary btn-lg px-4">
@@ -38,7 +38,7 @@
 {% endblock %}
 
 {% block header_buttons %}
-    <a href="https://t.me/YourGhostwriterBot" class="btn btn-primary me-2" target="_blank">
+    <a href="https://t.me/Ghostcopywriterregistration_bot" class="btn btn-primary me-2" target="_blank">
         <i class="bi bi-telegram me-1"></i>Получить токен
     </a>
     <a href="{% url 'token_required_page' %}" class="btn btn-outline-primary">
