--- a/generator/templates/generator/invalid_token.html
+++ b/generator/templates/generator/invalid_token.html
@@ -38,7 +38,7 @@
                     </div>
 
                     <div class="text-center mt-4">
-                        <a href="https://t.me/YourGhostwriterBot" class="btn btn-primary btn-lg" target="_blank">
+                        <a href="https://t.me/Ghostcopywriterregistration_bot" class="btn btn-primary btn-lg" target="_blank">
                             <i class="bi bi-telegram me-2"></i>Получить новый токен
                         </a>
                     </div>
