--- a/generator/templates/generator/index.html
+++ b/generator/templates/generator/index.html
@@ -866,6 +866,8 @@
         })();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/imask@7.6.0/dist/imask.js"></script>
+    {% load static %}
+    <script src="{% static 'subscription_tracking.js' %}"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
